[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [
    { name = "Andrew Teixeira", email = "<teixeira@broadinstitute.org>"}
]
description = "Python interface to the Sectigo Certificate Manager REST API"
dynamic = [ "dependencies" ]
homepage = "https://github.com/broadinstitute/python-cert_manager.git"
keywords = ["sectigo", "comodo", "certificate"]
license = "BSD-3-Clause"
name = "cert_manager"
readme = "README.md"
repository = "https://github.com/broadinstitute/python-cert_manager.git"
requires-python = ">=3.9,<3.12.1"
version = "2.4.0"

[tool.poetry.dependencies]
requests = "^2.32.3"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
coverage = "^7.6.10"
fixtures = "^4.2.2"
green = "^4.0.2"
mock = "^5.1.0"
responses = "^0.25.3"
testtools = "^2.7.2"
yamllint = "^1.35.1"

[tool.ruff]
fixable = ["ALL"]
line-length = 120
select = [
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "PL",  # Pylint
  "UP",  # pyupgrade
]

[tool.ruff.pydocstyle]
convention = "google"
