[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [
    { name = "Andrew Teixeira", email = "<teixeira@broadinstitute.org>"}
]
description = "Python interface to the Sectigo Certificate Manager REST API"
dynamic = [ "dependencies" ]
keywords = ["sectigo", "comodo", "certificate"]
license = { text = "BSD-3-Clause" }
name = "cert_manager"
readme = "docs/README.md"
requires-python = ">=3.9,<4.0.0"
version = "2.4.0"

[project.urls]
homepage = "https://github.com/broadinstitute/python-cert_manager.git"
repository = "https://github.com/broadinstitute/python-cert_manager.git"

[tool.poetry.dependencies]
requests = "^2.32.3"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
coverage = "^7.6.10"
fixtures = "^4.2.2"
mock = "^5.1.0"
responses = "^0.25.3"
testtools = "^2.7.2"
yamllint = "^1.35.1"
pytest = "^8.3.4"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = [
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "PL",  # Pylint
  "UP",  # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"
